# tetridiv

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-run-tests.sh  pyproject.toml  run-tests.sh  setup.cfg  setup.py  tetridiv.py
examples/: dolfinx_beam.ipynb  dolfinx_helpers.py  dolfinx_test_cases.ipynb  simple_shapes.ipynb  test_cases.ipynb  tetridiv_tests.ipynb  utils.py  visualisation_helpers.py
tests/: test_dolfinx.py  test_dolfinx_input.py  test_errors.py  test_nondolfinx.py  test_nondolfinx_input.py  utils.py
tests/test_meshes/dolfinx/tet2hex/: ellipvol.json  one_tet.json  two_tet.json
tests/test_meshes/dolfinx/tri2quad/2d/: circle.json  one_tri.json  two_tri.json
tests/test_meshes/dolfinx/tri2quad/3d/: ellipsurf.json
tests/test_meshes/nondolfinx/tet2hex/: 1tet.json  2tet.json  ellipvol.json
tests/test_meshes/nondolfinx/tri2quad/2d/: 1tri.json  2tri.json  circle.json
tests/test_meshes/nondolfinx/tri2quad/3d/: ellipsurf.json
tetridiv/: __init__.py  subdivison.py  tetridiv.py
