[metadata]
name = tetridiv
version = attr: tetridiv.__version__
author = Matthew Bilton
author_email = Matt.A.Bilton@gmail.com
long_description = file: README.md
description = Subdivides tetrahedral meshes into hexahedral meshes, and triangular meshes into quadrilateral meshes.
keywords = mesh, tetrahedral, hexahedral, triangular, quadrilateral, subdivision
url = https://github.com/MABilton/approx_post
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
install_requires =
    numpy

packages = find:

[options.extras_require]
test =
    pytest
    numpy
    vtk
    pyvista
    meshio
dev =
    pre-commit
    black
    flake8

[options.packages.find]
exclude =
    tests
    example_notebooks
